# rustzot_api

./: Cargo.toml  LICENSE  README.md
src/: ap.rs  calendar.rs  calender.rs  common.rs  courses.rs  enrollment.rs  enrollment_history.rs  grades.rs  instructors.rs  larc.rs  lib.rs  other.rs  programs.rs  study_rooms.rs  websoc.rs
